test/good/t111.zls

let hybrid count(clk) = o where
  rec o = present clk | (init) -> (0 -> last o + 1) init 0

