test/bad/t24.zls
(*
  An initialized variable must only change at discrete instants
*)


let hybrid main(i) = o where
  rec init o = 1 and o = last o + 1
